<resources>
    <string name="app_name">AKSYS Firmware Installer</string>
    <string name="app_name_short">Firmware Installer</string>
    <string name="title_activity_main">SHAKS Gamepad Utility</string>
    <string name="menu_option">Option</string>
    <string name="menu_sensor">Sensor Option</string>
    <string name="menu_gamepad">Check Gamepad</string>
    <string name="title_activity_gamepad_list">Select Gamepad</string>
    <string name="title_activity_all_gamepad_list">All Gamepads List</string>
    <string name="title_activity_gamepad_option">Gamepad Option</string>
    <string name="about">About Application</string>
    <string name="setting">Setting</string>
    <string name="version">Version:</string>
    <string name="intent_gamepad_index" translatable="false">gamepad_index</string>
    <string name="sensor_gyroscope_status_format" translatable="false"></string>
    <string name="sensor_all_status_format" translatable="false">Acc X: %+05d Y: %+05d Z: %+05d\nGyroX: %+05d Y: %+05d Z: %+05d</string>
    <string name="save">Save</string>
    <string name="calibrating">Calibrating...</string>
    <string name="saved">Saved!</string>
    <string name="sensor_sensitibity">Sensitivity</string>
    <string name="sensor_sensitibity_desc">Adjust the speed of movement.</string>
    <string name="sensor_calibration">Sensor Calibration</string>
    <string name="sensor_calibration_description">Adjust the gamepad by placing it horizontally.</string>
    <string name="sensor_calibration_button">Calibration</string>
    <string name="sensor_caution_description">This method works the same for all applications that use the sensor. Sometimes, there may be additional options within the application.</string>
    <string name="gamepad_sensor_option">Gamepad Sensor Option</string>
    <string name="about_description">The application used to upgrade the gamepad.</string>
    <string name="intent_activity_type" translatable="false">activity_type</string>
    <string name="firmware_update">Firmware Install</string>
    <string name="gamepad_test">Gamepad Test</string>
    <string name="gamepad_charging">Charging...</string>
    <string name="gamepad_battery">Battery</string>
    <string name="lable_firmware">Firmware</string>
    <string name="lable_battery">Battery</string>
    <string name="intent_gamepad_addr" translatable="false">gamepad_address</string>
    <string name="text_battery_charging">Now Charging...</string>
    <string name="text_battery_value">Battery: %.1f%%</string>
    <string name="text_address">Address: %s</string>
    <string name="text_firmware">Firmware: %s</string>
    <string name="text_normal">Normal</string>
    <string name="text_add_sensor">Sensor</string>
    <string name="text_add_audio">Audio</string>
    <string name="text_connectiontype">Product Type: %s</string>
    <string name="available_firmware">Update to new firmware with improved features.</string>
    <string name="text_poweroff">Power Off</string>
    <string name="text_gamepad_number">Player %d</string>
    <string name="text_no_gamepad_description">Gamepad not found.\nPlease recheck your gamepad\'s USB / Bluetooth connection.</string>
    <string name="text_contact_aksys">Contact Us</string>
    <string name="link_homepage_">http://www.shaksgame.com/</string>
    <string name="text_connect_bluetooth">Connect\nBluetooth</string>
    <string name="alert_turn_on_gamepad_description">You can turn on the power by pressing the SHAKS button.\nDepending on the charge state of the battery may be necessary.</string>
    <string name="alert_turn_on_gamepad">Turn on gamepad.</string>
    <string name="lable_connected_type">Product Type</string>
    <string name="text_check_device">Check Device</string>
    <string name="text_check_device_description">You can check whether the gamepad is working properly.</string>
    <string name="contact_kakaoplus">https://pf.kakao.com/_wnLxaT/chat</string>
    <string name="shaks_homepage">SHAKS HOMEPAGE</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>
    <string name="up">UP</string>
    <string name="button_axis_test">Input Test</string>
    <string name="button_ltrigger">L Trigger</string>
    <string name="axis_brake">BRAKE</string>
    <string name="button_rtrigger">R Trigger</string>
    <string name="axis_gas">GAS</string>
    <string name="button_lb">Button LB</string>
    <string name="button_rb">Button RB</string>
    <string name="button_lstick_click">L Stick Click</string>
    <string name="axis_lstick_x">L Stick (X)</string>
    <string name="axis_lstick_y">L Stick (Y)</string>
    <string name="button_rstick_click">R Stick Click</string>
    <string name="axis_rstick_x">R Stick (X)</string>
    <string name="axis_rstick_y">R Stick (Y)</string>
    <string name="howto_close_message">Press and hold the back button to exit.</string>
    <string name="left">LEFT</string>
    <string name="with_vibration_test">Test with Vibration</string>
    <string name="with_vibration_test_description">You can test vibration with LT / RT.</string>
    <string name="clicked">Press</string>
    <string name="release">Free</string>
    <string name="text_now_firmware_installing">The update is in progress.\nAutomatically reboot after finishing update.\nPlease wait for the gamepad to reconnect.</string>
    <string name="text_using_latest_fw">The latest firmware is installed.</string>
    <string name="text_gamepad_notfound">Gamepad Not Found</string>
    <string name="text_gamepad_notfound_desc">Sorry!\nGamepad not found.\nBack to Gamepad List.</string>
    <string name="intent_reinstall" translatable="false">reinstall</string>
    <string name="question_firmware_install">Do you want to install firmware?\nVersion: %d\nDevice: %s</string>
    <string name="question_firmware_reinstall">Do you want to install the firmware(%s) again? Sometimes you can press the reset button on the back of the gamepad to fix the problem.</string>
    <string name="alert_file_notfound">Not Found Firmware.\nCancel update?</string>
    <string name="firmware_reinstall">Firmware Re-install</string>
    <string name="title_activity_button_config">Button Config</string>
    <string name="title_activity_gamepad_config">Gamepad Config</string>
    <string name="action_all_gamepads">Show All Gamepads</string>
    <string name="action_target_gamepads">Show SHAKS Gamepads</string>
    <string name="link_purchase">http://www.shaksgame.com/</string>
    <string name="shaks_purchase">Purchase SHAKS</string>
    <string name="button_config_desc">Change function for \"O-Button\"</string>
    <string name="alert_not_support_firmware">Sorry! Not Support Gamepad.</string>
    <string name="aksys_homepage">AKSYS HOMEPAGE</string>
    <string name="link_aksys_homepage">http://aksys.co.kr</string>
    <string name="none">None</string>
    <string name="opt_turbo">Turbo Option</string>
    <string name="opt_camera_volumeup">Camera (Volume Up)</string>
    <string name="opt_screenshot">ScreenShot</string>
    <string name="obutton_no_function">O Button: No Function</string>
    <string name="obutton_screenshot">O Button: Screenshot</string>
    <string name="obutton_turbo">Turbo Key (</string>
    <string name="obutton_volume_up">O Button: Camera (Volume Up)</string>
    <string name="not_setting">None</string>
    <string name="need_firmware_version">This feature is available from firmware %d.</string>
    <string name="no_working_cancel_in_firmware">The firmware is in progress. Please wait.</string>
    <string name="text_show_bluetooth">Bluetooth Settings</string>
    <string name="gamepad_windows_mode">Windows Mode</string>
    <string name="title_no_gamepad">No Gamepad</string>
    <string name="firmware_update_completed_desc">The firmware update is complete.\n\nResult ---\nGamepad Name: %s\nInstalled Firmware: %s\n\nPress CLOSE to unpair the gamepad.</string>
    <string name="text_recheck_gamepad_status">Now Re-checking Device Status.</string>
    <string name="text_search_file">Search File</string>
    <string name="text_now_installing">Installing…\n</string>
    <string name="text_gamepad_is_rebooting">Your device will turn back on soon.\n\nIf you can\'t wait for the device to turn on automatically, Press Home button, force close this app, and press reset button in device.</string>
    <string name="text_reconnecting">Re-connecting…</string>
    <string name="text_window_mode_information">This gamepad is set to windowed mode.\nTo use this device, press the LB + Select Please pairing again.</string>
    <string name="text_request_gamepad">Do you want to reconnect gamepad?</string>
    <string name="text_waiting_connection">Waiting connection…</string>
    <string name="title_option_obutton">Option O-Button</string>
    <string name="title_setting_turbo_button">Setting Turbo Keys</string>
    <string name="text_firmware_need_power">You need to charge the gamepad to get started.\nPlease connect the cable.</string>
    <string name="ok">OK</string>
    <string name="reconnect">Reconnect</string>
    <string name="format_cancel_install_message">not want to install firmware.\nVersion: %d\nDevice: %s</string>
</resources>
